# meditron-2025

./: README.md
backend/: Dockerfile  Makefile  example.env  info  pyproject.toml
backend/src/: config.py  main.py
backend/src/math_models/: core.py
backend/src/ml/: breast_cancer_data.xlsx  breast_metabrick.ipynb  cancer.ipynb  model.py
backend/src/ml/cox_models/: cox_model_stage_2.pkl  label_encoders.pkl
backend/src/routers/: report_router.py
backend/src/schema/: patient_info_schema.py  reports_schema.py
backend/src/service/: report_service.py
math_model/: new.py
med_front_ai/: .dockerignore  Dockerfile  api-service.js  index.html  nginx.conf  proxy_server.py
med_front_ai/.vite/vitest/: results.json
med_front_ai/components/: form-fields.html
med_front_ai/css/: style.css
med_front_ai/js/: api-service.js  app.js  constants.js  form-handler.js  recommendations.js  txt-generator.js
med_front_ai/tests/: biomarker-logic.test.js  form-handler.test.js
ml/: cancer.ipynb
ml/cox_models/: cox_model_stage_1.pkl  cox_model_stage_2.pkl  cox_model_stage_3.pkl  cox_model_stage_4.pkl  label_encoders.pkl  models_metadata.json
model/: README.md  breast_cancer_1st.csv  breast_cancer_2st.csv  breast_cancer_3st.csv  breast_cancer_4st.csv  breast_cancer_pkpd_model.py  constants.py  main.py  new.ipynb  optimization.py  patient_profiles.py  pkpd.py  tst copy.ipynb  tst.ipynb  tumor_model.py  tumor_pkpd_model_notebook.ipynb
