[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "hypercorn>=0.18.0",
    "lifelines>=0.30.0",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.7.2",
]
